# SplineInterpolation

./: .gitignore  CMakeLists.txt  CubicFunction.hpp  SplineInterpolation.hpp  SplineInterpolationTest.cpp  TridiagonalMatrix.hpp  draw.py  pycall_dll.cpp.bad
